@@ -1,3 +1,9 @@
+2/4/2025 bis
+	Provided return codes for all solving methods.
+	Added support for conditional count lines.
+	Modified conditional selections to include BeforeDigits, AfterDigits, and NextToDigits.
+	Partial implementation of DigitInstance conditional selection..just pushing to pass code home.
+
 2/4/2025
 	Added support for InOrder clues.
 
